--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,47 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'janoamaral/tokyo-night-tmux'
+set -g @plugin 'rose-pine/tmux'
 
-#set -g @plugin 'catppuccin/tmux'
+# Rosepine settings
+set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_host 'on' # Enables hostname in the status bar
+set -g @rose_pine_date_time '%d.%m. %H:%¨M' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
+set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
+# If @rose_pine_bar_bg_disable is set to 'on', uses the provided value to set the background color
+# It can be any of the on tmux (named colors, 256-color set, `default` or hex colors)
+# See more on http://man.openbsd.org/OpenBSD-current/man1/tmux.1#STYLES
+# set -g @rose_pine_bar_bg_disabled_color_option 'default'
+
+set -g @rose_pine_only_windows 'on' # Leaves only the window module, for max focus and space
+set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+
+set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
+set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
+set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current directory as window name
+# Previously set -g @rose_pine_window_tabs_enabled
+
+# Example values for these can be:
+set -g @rose_pine_left_separator ' : ' # The strings to use as separators are 1-space padded
+set -g @rose_pine_right_separator " " # Accepts both normal chars & nerdfont icons
+# set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
+set -g @rose_pine_window_separator ' | ' # Replaces the default `:` between the window number and name
+set -g @rose_pine_window_status_separator " | " # Changes the default icon that appears between window names
+
+# These are not padded
+# set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
+# set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
+# set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
+# set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
+# set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
+# set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
+
+# set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
+# set -g @rose_pine_status_left_append_section 'It works'
+# set -g @rose_pine_status_right_prepend_section 'with normal text'
+# set -g @rose_pine_status_right_append_section 'too'
 
 # Shows the current music playing on tmux status bar
  set -g @tokyo-night-tmux_date_format DMY
@@ -53,9 +92,11 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# opens tmux pane on current directory
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# opens tmux pane on current directory and split the windows
+unbind v
+unbind h
+bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 
 # Start tmux index at 1
 set -g base-index 1
