--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,11 +35,11 @@ set -g @rose_pine_status_left_prepend_section '#(cat #{socket_path}-\#{session_i
 set -g @rose_pine_status_right_append_section '#(cat #{socket_path}-\#{session_id}-vimbridge-R)'
 set -g @rose_pine_window_status_separator " " # Changes the default icon that appears between window names
 # Rosepine settings
-# Example values for these can be:
-# set -g @rose_pine_left_separator ' : ' # The strings to use as separators are 1-space padded
-# set -g @rose_pine_right_separator " " # Accepts both normal chars & nerdfont icons
-# # set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
-# set -g @rose_pine_window_separator ' | ' # Replaces the default `:` between the window number and name
+# set -g @rose_pine_left_separator ' > ' # The strings to use as separators are 1-space padded
+set -g @rose_pine_right_separator ' ' # Accepts both normal chars & nerdfont icons
+# set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
+set -g @rose_pine_window_separator ' ' # Replaces the default `:` between the window number and name
+set -g @rose_pine_window_status_separator " | " # Changes the default icon that appears between window names
 #
 # # These are not padded
 # set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
