fix: hyprland nvidia and shadows

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ monitor=,1920x1080@144,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = ghostty
 $fileManager = thunar
 $menu = rofi --show drun
 
@@ -75,6 +75,11 @@ env = HYPRCURSOR_THEME,$cursor_theme
 env = XCURSOR_SIZE,$cursor_size
 env = XCURSOR_THEME,$cursor_theme
 
+# NVIDIA
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
+
 
 #####################
 ### LOOK AND FEEL ###
@@ -88,7 +93,7 @@ general {
     gaps_in = 10
     gaps_out = 10
     border_size = 2
-    col.active_border = rgba(07b5efff)
+    col.active_border = rgba(ffc8ffd9)
     col.inactive_border = rgba(ffffff00)
     layout = dwindle
 }
@@ -98,12 +103,15 @@ decoration {
     rounding = 10
     active_opacity = 1.0
     inactive_opacity = 1.0
-    drop_shadow = true
-    shadow_ignore_window = true
-    shadow_offset = 2 2
-    shadow_range = 8
-    shadow_render_power = 2
-    col.shadow = 0x66000000
+
+    shadow {
+      ignore_window = true
+      offset = 2 2
+      range = 8
+      render_power = 2
+      color = 0x66000000
+    }
+
     blur {
         enabled = true
         size = 10
@@ -115,7 +123,6 @@ decoration {
         #vibrancy = 0.1696
     }
 }
-
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes
@@ -182,18 +189,18 @@ gestures {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 
-plugin {
-csgo-vulkan-fix {
-        res_w = 1280
-        res_h = 960
-
-        # NOT a regex! This is a string and has to exactly match initial_class
-        class = cs2
-
-        # Whether to fix the mouse position. A select few apps might be wonky with this.
-        fix_mouse = false # change to true when playing cs2
-    }
-}
+# plugin {
+# csgo-vulkan-fix {
+#         res_w = 1280
+#         res_h = 960
+#
+#         # NOT a regex! This is a string and has to exactly match initial_class
+#         class = cs2
+#
+#         # Whether to fix the mouse position. A select few apps might be wonky with this.
+#         fix_mouse = false # change to true when playing cs2
+#     }
+# }
 
 
 ####################
@@ -209,7 +216,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, pkill rofi || rofi -show drun
-bind = $mainMod, I, exec, firefox
+bind = $mainMod, I, exec, zen-browser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
