fix: wallpaper with hyprpaper

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/wall.png
-wallpaper = ,~/Pictures/wall.png
+preload = ~/Pictures/pink-clouds.jpg
+wallpaper = , ~/Pictures/pink-clouds.jpg
