fix: hyprlock and hypridle configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -266,6 +266,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Mute and lock the screen with hyprlock
+bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
