feat: hyprland session with tmux and less hyprlock blur

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -32,13 +32,11 @@ exec-once = hyprpaper
 exec-once = safeeyes -e
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --watch cliphist store
-#exec-once = xhost si:localuser:root
 exec-once = waybar
-exec      = hyprshade auto
-# exec-once = $terminal
+exec-once = $terminal
+exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" #tmux hyprland env
+#exec-once = xhost si:localuser:root
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
 
 #############################
 ### ENVIRONMENT VARIABLES ###
