--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -228,6 +228,11 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movefocus, r
+bind = $mainMod SHIFT, K, movefocus, k
+bind = $mainMod SHIFT, J, movefocus, d
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
