--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -17,12 +17,12 @@
         "hyprland/workspaces"
     ],
     "modules-right": [
-        "idle_inhibitor",
+        // "idle_inhibitor",
         "pulseaudio",
         "network",
         "cpu",
         "memory",
-        "temperature",
+        // "temperature",
         "hyprland/language",
         // "battery",
         // "battery#bat2",
