--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -88,7 +88,7 @@ env = NVD_BACKEND,direct
 general {
     allow_tearing = true
     gaps_in = 10
-    gaps_out = 10
+    gaps_out = 50
     border_size = 2
     col.active_border = rgba(ffc8ffd9)
     col.inactive_border = rgba(ffffff00)
@@ -279,10 +279,8 @@ bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
+windowrule = workspace 9, class:steam # opens steam on workspace 9
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
