feat: open steam games on fullscreen at workspace 10

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -219,19 +219,20 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
-bind = $mainMod, Print, exec, grim -g "$(slurp -d)" - | wl-copy #Print screen and copy to clipboard
+bind = $mainMod, Print, exec, hyprshot -m region --clipboard-only # take screenshot and copy to clipboard
 bind = $mainMod SHIFT, F, exec, hyprctl --batch "dispatch togglefloating ; dispatch centerwindow 1", # Toggle window floating and center the window on the screen
 
-# Move focus with mainMod + arrow keys
+# change focus of screen
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+# move window
 bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movefocus, r
-bind = $mainMod SHIFT, K, movefocus, k
-bind = $mainMod SHIFT, J, movefocus, d
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, k
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -283,4 +284,5 @@ bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrule = workspace 9, class:steam # opens steam on workspace 9
+windowrule = workspace 10, fullscreen, class:steam_app_.* #opens any steam game on workspace 10
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
