feat: autostart browser, spotify and steam on their workspaces

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ monitor=,1920x1080@144,0x0,1
 $terminal = ghostty
 $fileManager = thunar
 $menu = rofi --show drun
+$browser = zen-browser
 
 
 #################
@@ -33,8 +34,11 @@ exec-once = safeeyes -e
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --watch cliphist store
 exec-once = waybar
-exec-once = $terminal
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" #tmux hyprland env
+exec-once = $terminal
+exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 4 silent] spotify
+exec-once = [workspace 8 silent] steam
 #exec-once = xhost si:localuser:root
 # exec-once = nm-applet &
 
