feat: hyprland workspaces for steam and spotify

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,8 +37,8 @@ exec-once = waybar
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" #tmux hyprland env
 exec-once = $terminal
 exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 4 silent] spotify
-exec-once = [workspace 8 silent] steam
+exec-once = [workspace 4 silent] spotify-launcher
+#exec-once = [workspace 8 silent] steam
 #exec-once = xhost si:localuser:root
 # exec-once = nm-applet &
 
@@ -284,9 +284,7 @@ bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
+windowrule = workspace 4, class:Spotify #opens spotify on workspace 4
 windowrule = workspace 9, class:steam # opens steam on workspace 9
 windowrule = workspace 10, fullscreen, class:steam_app_.* #opens any steam game on workspace 10
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
