--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/pink-clouds.jpg
-wallpaper = , ~/Pictures/pink-clouds.jpg
+preload = ~/Pictures/wheat.png
+wallpaper = , ~/Pictures/wheat.png
