feat: hyprpicker and cliphist

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -218,13 +218,15 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, pkill rofi || rofi -show drun
 bind = $mainMod, I, exec, zen-browser
-bind = $mainMod, V, togglefloating,
+# bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, Print, exec, hyprshot -m region --clipboard-only # take screenshot and copy to clipboard
 bind = $mainMod SHIFT, F, exec, hyprctl --batch "dispatch togglefloating ; dispatch centerwindow 1", # Toggle window floating and center the window on the screen
+bind = $mainMod, P, exec, hyprpicker -a # Gets color picker
+bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy # See clipboard history
 
 # change focus of screen
 bind = $mainMod, H, movefocus, l
