fix: wallpapers path

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/wheat.png
-wallpaper = , ~/Pictures/wheat.png
+preload = ~/wallpapers/wheat.png
+wallpaper = , ~/wallpapers/wheat.png
