--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,6 @@ $fileManager = thunar
 $menu = rofi --show drun
 $browser = zen-browser
 
-
 #################
 ### AUTOSTART ###
 #################
@@ -30,6 +29,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 #exec-once = easyeffects --gapplication-service
 exec-once = hypridle
 exec-once = hyprpaper
+exec-once = udiskie
 exec-once = safeeyes -e
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --watch cliphist store
@@ -264,10 +264,6 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -287,6 +283,7 @@ bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
 windowrule = workspace 4, class:Spotify #opens spotify on workspace 4
+windowrule = workspace 7, class:discord #opens spotify on workspace 4
 windowrule = workspace 9, class:steam # opens steam on workspace 9
 windowrule = workspace 10, fullscreen, class:steam_app_.* #opens any steam game on workspace 10
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
