--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,35 +1,11 @@
 {
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 44, // Waybar height (to be removed for auto height)
-    "spacing": 4, // Gaps between modules (4px)
-    "fixed-center": true,
-    "reload_style_on_change": true,
-    "margin": "10 10 5 10",
-    "modules-left": [
-        "hyprland/window"
-        // "group/info"
-        // "custom/arch"
-        // "hyprland/workspaces"
-    ],
-    "modules-center": [
-        // "hyprland/window"
-        "hyprland/workspaces"
-    ],
-    "modules-right": [
-        // "idle_inhibitor",
-        "pulseaudio",
-        "network",
-        "cpu",
-        "memory",
-        // "temperature",
-        "hyprland/language",
-        // "battery",
-        // "battery#bat2",
-        "clock"
-        // "group/hub",
-        // "group/countrol-center"
-    ],
-    //Modules configuration
-    "include": ["~/.config/waybar/modules.jsonc"]
+  "layer": "top",
+  "position": "top",
+  "height": 44,
+  "spacing": 2,
+  "fixed-center": true,
+  "reload_style_on_change": true,
+  "margin": "10 10 5 10",
+  "modules-center": ["hyprland/workspaces"],
+  "include": ["~/.config/waybar/modules.jsonc"]
 }
