feat: changing workspaces

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,53 +1,7 @@
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1080@144,0x0,1
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
 $terminal = ghostty
 $fileManager = thunar
 $menu = rofi --show drun
 $browser = zen-browser
-
-#################
-### AUTOSTART ###
-#################
-
-#exec-once = systemctl --user import-environment
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XAUTHORITY
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-#exec-once = gnome-keyring-daemon --start
-#exec-once = ags
-#exec-once = easyeffects --gapplication-service
-exec-once = hypridle
-exec-once = hyprpaper
-exec-once = udiskie
-exec-once = safeeyes -e
-exec-once = wl-clip-persist --clipboard regular
-exec-once = wl-paste --watch cliphist store
-exec-once = waybar
-exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" #tmux hyprland env
-exec-once = $terminal
-exec-once = [workspace 2 silent] $browser
-exec-once = [workspace 4 silent] spotify-launcher
-#exec-once = [workspace 8 silent] steam
-#exec-once = xhost si:localuser:root
-# exec-once = nm-applet &
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
 $system_theme = Arc
 $cursor_theme = Adwaita
 $cursor_size  = 24
@@ -55,9 +9,22 @@ $icon_theme   = Papirus
 $dpi_scale    = 1
 $text_scale   = 1
 
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XAUTHORITY
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = hypridle
+exec-once = hyprpaper
+exec-once = udiskie
+exec-once = safeeyes -e
+exec-once = wl-clip-persist --clipboard regular
+exec-once = wl-paste --watch cliphist store
+exec-once = waybar
+exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
+exec-once = $terminal
+exec-once = [workspace 2 silent] $browser
+exec-once = [workspace 4 silent] spotify-launcher
+
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 env = CLUTTER_BACKEND,wayland
 env = GDK_BACKEND,wayland,x11,*
 env = GDK_DPI_SCALE,$dpi_scale
@@ -68,38 +35,26 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = SDL_VIDEODRIVER,wayland
-
-# CURSORS
-
 env = HYPRCURSOR_SIZE,$cursor_size
 env = HYPRCURSOR_THEME,$cursor_theme
 env = XCURSOR_SIZE,$cursor_size
 env = XCURSOR_THEME,$cursor_theme
-
-# NVIDIA
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 
+monitor=,1920x1080@144,0x0,1
 
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     allow_tearing = true
     gaps_in = 10
-    gaps_out = 50
+    gaps_out = 30
     border_size = 2
     col.active_border = rgba(ffc8ffd9)
     col.inactive_border = rgba(ffffff00)
     layout = dwindle
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
     active_opacity = 1.0
@@ -120,11 +75,9 @@ decoration {
         ignore_opacity = on
         popups = true
         new_optimizations = true
-
-        #vibrancy = 0.1696
     }
 }
-# https://wiki.hyprland.org/Configuring/Variables/#animations
+
 animations {
     enabled = yes
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
@@ -141,32 +94,23 @@ animations {
     animation = specialWorkspace, 1, 4, default, slidevert
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true
+    preserve_split = true
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    disable_hyprland_logo = true
     disable_splash_rendering = true
     enable_swallow = false
     mouse_move_enables_dpms = true
     vrr = 1
 }
 
-
-#############
-### INPUT ###
-#############
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = br
     kb_variant =
@@ -179,16 +123,12 @@ input {
     repeat_rate = 25
     repeat_delay = 200
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
 }
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 
 # plugin {
 # csgo-vulkan-fix {
@@ -204,24 +144,15 @@ gestures {
 # }
 
 
-####################
-### KEYBINDINGS ###
-####################
+$mainMod = SUPER
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, pkill rofi || rofi -show drun
 bind = $mainMod, I, exec, zen-browser
-# bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, $menu
-# bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, Print, exec, hyprshot -m region --clipboard-only # take screenshot and copy to clipboard
 bind = $mainMod SHIFT, F, exec, hyprctl --batch "dispatch togglefloating ; dispatch centerwindow 1", # Toggle window floating and center the window on the screen
@@ -275,15 +206,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # Mute and lock the screen with hyprlock
 bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
 windowrule = workspace 4, class:Spotify #opens spotify on workspace 4
-windowrule = workspace 7, class:discord #opens spotify on workspace 4
-windowrule = workspace 9, class:steam # opens steam on workspace 9
-windowrule = workspace 10, fullscreen, class:steam_app_.* #opens any steam game on workspace 10
+windowrule = workspace 5, class:discord #opens spotify on workspace 4
+windowrule = workspace 6, class:steam # opens steam on workspace 9
+windowrule = workspace 7, fullscreen, class:steam_app_.* #opens any steam game on workspace 10
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
