feat: opentabletdriver on startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@ exec-once = safeeyes -e
 exec-once = wl-clip-persist --clipboard regular
 exec-once = wl-paste --watch cliphist store
 exec-once = waybar
+exec-once = systemctl --user start opentabletdriver
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE"
 exec-once = $terminal
 exec-once = [workspace 2 silent] $browser
