--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,34 +40,6 @@ set -g @rose_pine_right_separator ' ' # Accepts both normal chars & nerdfont ico
 # set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
 set -g @rose_pine_window_separator ' ' # Replaces the default `:` between the window number and name
 set -g @rose_pine_window_status_separator " | " # Changes the default icon that appears between window names
-#
-# # These are not padded
-# set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
-# set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
-# set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
-# set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
-# set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
-# set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-
-# set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
-# set -g @rose_pine_status_left_append_section 'It works'
-# set -g @rose_pine_status_right_prepend_section 'with normal text'
-# set -g @rose_pine_status_right_append_section 'too'
-
-# Shows the current music playing on tmux status bar
- set -g @tokyo-night-tmux_date_format DMY
- set -g @tokyo-night-tmux_time_format 24H
-
-#Shows relative path on tmux pane
-set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative # 'relative' or 'full'
-
-#Set the tokyo night theme variation
-set -g @theme_variation 'storm'
-
-# Fix renaming windows
- set -g @catppuccin_window_default_text "#W"
- set -g @catppuccin_window_current_text "#W"
 
 # Restore neovim sessions
 set -g @resurrect-strategy-nvim 'session'
@@ -100,5 +72,10 @@ set-option -g renumber-windows on
 # Shift alt vim keys to swith windows
 bind -n M-H previous-window
 bind -n M-L next-window
+
+# yazi image preview
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 run-shell '~/.tmux/plugins/tpm/tpm'
