fix: .zsh cache

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -115,7 +115,7 @@ misc {
 input {
     kb_layout = br
     kb_variant =
-    kb_model =
+    kb_model = abnt2
     kb_options =
     kb_rules =
 
@@ -127,18 +127,12 @@ input {
     sensitivity = 0
 }
 
-# plugin {
-# csgo-vulkan-fix {
-#         res_w = 1280
-#         res_h = 960
-#
-#         # NOT a regex! This is a string and has to exactly match initial_class
-#         class = cs2
-#
-#         # Whether to fix the mouse position. A select few apps might be wonky with this.
-#         fix_mouse = false # change to true when playing cs2
-#     }
-# }
+plugin {
+    csgo-vulkan-fix {
+      fix_mouse = true
+      vkfix-app = cs2, 1280, 960
+    }
+}
 
 
 $mainMod = SUPER
