fix(hyprland): window rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,6 +43,7 @@ env = XCURSOR_THEME,$cursor_theme
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
+env = GTK_IM_MODULE,simple
 
 monitor=,1920x1080@144,0x0,1
 
@@ -115,7 +116,7 @@ misc {
 input {
     kb_layout = br
     kb_variant =
-    kb_model = abnt2
+    kb_model =
     kb_options =
     kb_rules =
 
@@ -127,12 +128,18 @@ input {
     sensitivity = 0
 }
 
-plugin {
-    csgo-vulkan-fix {
-      fix_mouse = true
-      vkfix-app = cs2, 1280, 960
-    }
-}
+# plugin {
+# csgo-vulkan-fix {
+#         res_w = 1280
+#         res_h = 960
+#
+#         # NOT a regex! This is a string and has to exactly match initial_class
+#         class = cs2
+#
+#         # Whether to fix the mouse position. A select few apps might be wonky with this.
+#         fix_mouse = false # change to true when playing cs2
+#     }
+# }
 
 
 $mainMod = SUPER
@@ -197,8 +204,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # Mute and lock the screen with hyprlock
 bind = $mainMod, O, exec, pactl set-sink-mute @DEFAULT_SINK@ 1 && hyprlock
 
-windowrule = workspace 4, class:Spotify #opens spotify on workspace 4
-windowrule = workspace 5, class:discord #opens spotify on workspace 4
-windowrule = workspace 6, class:steam # opens steam on workspace 9
-windowrule = workspace 7, fullscreen, class:steam_app_.* #opens any steam game on workspace 10
+windowrule = workspace 4, match:class Spotify #opens spotify on workspace 4
+windowrule = workspace 5, match:class discord #opens spotify on workspace 4
+windowrule = workspace 6, match:class steam # opens steam on workspace 9
+windowrule = workspace 7, match:class steam_app_.*, fullscreen on #opens any steam game on workspace 10
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
